--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://martin.gasque.fr/'
 languageCode = 'fr-fr'
-title = 'Martin Gasque'
+title = 'Meridian editions'
 theme = 'liftoff'
