--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,84 +1,47 @@
 [[main]]
     # Top-level menu entry
-    identifier = "work"
-    name = "Work"
-    url = "/projects/"
+    identifier = "projets"
+    name = "Travaux"
+    url = "/projets/"
     weight = 1
 
 [[main]]
-    identifier = "projects"
-    name = "Projects"
-    url = "/projects/"
-    parent = "work"
-    weight = 1
-
-[[main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
-    parent = "work"
+    # Top-level menu entry
+    identifier = "blog"
+    name = "Blog"
+    url = "/posts/"
     weight = 2
 
 [[main]]
-    identifier = "contact"
-    name = "Contact"
-    url = "/contact/"
-    parent = "work"
+    identifier = "posts"
+    name = "Tout les articles"
+    url = "/posts/"
+    parent = "blog"
     weight = 3
 
 [[main]]
-    # Top-level menu entry
-    identifier = "writing"
-    name = "Writing"
-    url = "/posts/"
-    weight = 4
-
-[[main]]
-    identifier = "posts"
-    name = "All Posts"
-    url = "/posts/"
-    parent = "writing"
-    weight = 4
-
-[[main]]
     identifier = "subsection"
-    name = "Subsection"
+    name = "Sous-sections"
     url = "/subsection/"
     # url = "/posts/subsection/" # Remove url param from subsection/_index.md frontmatter to use full permalink
-    parent = "writing"
-    weight = 5
-
-[[main]]
-    # Top-level menu entry
-    identifier = "explore"
-    name = "Explore"
-    url = "/categories/"
-    weight = 6
-
-[[main]]
-    identifier = "categories"
-    name = "Categories"
-    url = "/categories/"
-    parent = "explore"
-    weight = 6
+    parent = "blog"
+    weight = 3
 
 [[main]]
     identifier = "tags"
     name = "Tags"
     url = "/tags/"
-    parent = "explore"
-    weight = 7
+    parent = "blog"
+    weight = 3
 
 [[main]]
-    identifier = "series"
-    name = "Series"
-    url = "/series/"
-    parent = "explore"
-    weight = 8
-
+    identifier = "contact"
+    name = "Contact"
+    url = "/contact/"
+    weight = 4
+    
 [[main]]
-    identifier = "project-type"
-    name = "Project Types"
-    url = "/project-types/"
-    parent = "explore"
-    weight = 9
+    identifier = "about"
+    name = "A propos de nous"
+    url = "/about/"
+    weight = 5
