--- a/_prose.yml
+++ b/_prose.yml
@@ -1,7 +1,7 @@
 
 
 prose:
-  rooturl: 'content'
+  rooturl: ''
   siteurl: 'https://meridian-corp.web.app/'
   relativeLinks: 'http://prose.github.io/starter/links.jsonp'
   media: 'assets/uploads'
