--- a/_prose.yml
+++ b/_prose.yml
@@ -12,7 +12,7 @@ prose:
     - /archetypes
   metadata:
     content/posts:
-      - name: "title"
+      - name: "seo_title"
         field:
           element: "text"
           label: "Posts"
@@ -23,5 +23,5 @@ prose:
           value: CURRENT_DATETIME
       - name : "text"
       	field:
-        	element: "description"
-            label: "Description
+        	element: "textarea"
+            label: "Description"
