--- a/_prose.yml
+++ b/_prose.yml
@@ -29,3 +29,6 @@ prose:
       	field:
         	element: "multiselect"
             label: "Tags"
+            options:
+  				- name: 'Obsidian'
+    			value: 'obsidian'
