--- a/_prose.yml
+++ b/_prose.yml
@@ -1,7 +1,5 @@
-
-
 prose:
-  rooturl: ''
+  rooturl: '_posts'
   siteurl: 'https://meridian-corp.web.app/'
   relativeLinks: 'http://prose.github.io/starter/links.jsonp'
   media: 'assets/uploads'
@@ -20,24 +18,28 @@ prose:
       	field:
         	element: "text"
             label: "Description"
-    content/posts:
-      - name: "seo_title"
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "blog"
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Apples"
+              value: "apples"
+            - name: "Bananas"
+              value: "bananas"
+    _posts/static:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "page"
+      - name: "permalink"
         field:
           element: "text"
-          label: "Titre"
-      - name: "date"
-        field:
-          element: "date"
-          label: "Date publication"
-          value: CURRENT_DATETIME
-      - name : "text"
-      	field:
-        	element: "textarea"
-            label: "Description"
-      - name : "tags"
-      	field:
-        	element: "multiselect"
-            label: "Tags"
-            options:
-  				- name: 'Obsidian'
-    			value: 'obsidian'
+          label: "Permalink"
+          value: ""
