--- a/_prose.yml
+++ b/_prose.yml
@@ -2,7 +2,7 @@ prose:
   rooturl: ''
   siteurl: 'https://meridian-corp.web.app/'
   relativeLinks: 'http://prose.github.io/starter/links.jsonp'
-  media: 'assets/uploads'
+  media: ''
   ignore:
     - firebase.json
     - /layouts
