--- a/_prose.yml
+++ b/_prose.yml
@@ -24,3 +24,12 @@ prose:
         field:
           element: "text"
           label: "Description"
+    "content/posts":
+      - name: "seo_title"
+        field:
+          element: "text"
+          label: "Titre"
+      - name: "slug"
+        field:
+          element: "text"
+          label: "Slug"
