--- a/_prose.yml
+++ b/_prose.yml
@@ -101,6 +101,7 @@ prose:
         field:
           element: "select"
           label: "Auteur"
+          alterable: true
           options:
           - name: "Obsidian"
             value: "obsidian"
@@ -108,6 +109,7 @@ prose:
         field:
           element: "multiselect"
           label: "Catégorie projet"
+          alterable: true
           options:
           - name: "Obsidian"
             value: "obsidian"
