--- a/_prose.yml
+++ b/_prose.yml
@@ -169,3 +169,29 @@ prose:
             value: "fps"
           - name: "Strategy Game"
             value: "strat"          
+    "content/createurs":
+      - name: "seo_title"
+        field:
+          element: "text"
+          label: "Titre SEO"
+      - name: "description"
+        field:
+          element: "text"
+          label: "Description"      
+      - name: "summary"
+        field:
+          element: "text"
+          label: "Sommaire"        
+      - name: "slug"
+        field:
+          element: "text"
+          label: "Slug"       
+      - name: "date"
+        field:
+          element: "hidden"
+          label: "Date"
+          value: CURRENT_DATETIME
+      - name: "feature_image"
+        field:
+          element: "text"
+          label: "Image presentation"
