--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,22 @@ name: Firebase update
 run-name: ${{ github.actor }} à lancé une update du site Meridian
 on: [push]
 jobs:
-  GitHub-Action:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run: hugo
-      - run: firebase deploy
+  deploy:
+  runs-on: ubuntu-22.04
+  concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+  steps:
+    - name: Hugo setup
+    uses: peaceiris/actions-hugo@v2
+    with:
+      hugo-version: '0.119.0'
+      extended: true
+      
+    - name: Build
+      run: hugo --minify
+    - uses: actions/checkout@v3
+    - uses: FirebaseExtended/action-hosting-deploy@v0
+      with:
+        repoToken: '${{ secrets.GITHUB_TOKEN }}'
+        firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MERIDIAN_CORP }}'
+        projectId: meridian-corp
