--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Firebase update
+branch: master
 run-name: ${{ github.actor }} à lancé une update du site Meridian
 on: [push]
 jobs:
@@ -23,4 +24,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MERIDIAN_CORP }}'
           projectId: meridian-corp
-          channelId: 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'
+          channelId: 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'  
