--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MERIDIAN_CORP }}'
           projectId: meridian-corp
-          channelId: 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'  
+          channelId: live
