--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ce site est à destination des followers de la Méridian Corp.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tinacms": "tinacms"
   },
   "repository": {
     "type": "git",
