--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "@tinacms/cli": "^1.5.30",
     "tinacms": "^1.5.21"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.4"
   }
 }
