--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tinacms": "tinacms"
+    "tinacms": "tinacms",    
+    "build": "tinacms build && hugo"
   },
   "repository": {
     "type": "git",
