static as asset dir

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -34,7 +34,9 @@ titleCaseStyle = 'AP' # Default, other options: Chicago (slightly different) or 
 
 ### Other
 archetypeDir = 'archetypes' # Default
-assetDir = 'assets' # Default
+# assetDir = 'assets' # Default
+assetDir = 'static' # modified
+
 contentDir = 'content' # Default
 dataDir = 'data' # Default
 disableHugoGeneratorInject = false # Default
