--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -34,8 +34,7 @@ titleCaseStyle = 'AP' # Default, other options: Chicago (slightly different) or 
 
 ### Other
 archetypeDir = 'archetypes' # Default
-# assetDir = 'assets' # Default
-assetDir = 'static' # modified
+assetDir = 'assets' # Default
 
 contentDir = 'content' # Default
 dataDir = 'data' # Default
